safari alignment fixes

--- a/app/styles/_scaffolding.scss
+++ b/app/styles/_scaffolding.scss
@@ -50,7 +50,6 @@ body {
 #site-header {
   background: #fff;
   padding:$grid-padding;
-  flex: 0 0 0;
   width:100%;
 }
 
@@ -65,6 +64,9 @@ body {
   position:absolute;
   margin:0 auto;
   bottom:10%;
+  left:50%;
+  transform:translate3d(-50%, 0, 0);
+  min-width:175px;
 }
 
 #site-main-body {
@@ -76,6 +78,8 @@ body {
 #site-main-heading {
   position:absolute;
   top:$grid-padding * 3;
+  left:50%;
+  transform:translate3d(-50%, 0, 0);
 }
 
 .wf-active #site-main-body {
@@ -92,6 +96,9 @@ body {
     min-width: 52px;
     height:100%;
     text-align: left;
+    flex:0 0 0;
+    transform:unset;
+    left:unset;
   }
 
   #site-main-heading {
@@ -112,6 +119,8 @@ body {
     position:absolute;
     right:0;
     top:0;
+    transform:unset;
+    left:unset;
   }
 }
 
@@ -135,6 +144,8 @@ body {
   // background-color:$color-secondary;
   display:block;
   position:absolute;
+  top:0;
+  left:0;
   content: "";
   width:100%;
   height: 100%;
@@ -183,6 +194,7 @@ body {
 .list.list-unstyled {
   list-style: none;
   display:block;
+  padding:0;
 
   &::after {
     content:"";
